--- a/po-libgimp/it.po
+++ b/po-libgimp/it.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp 1.1.16\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2004-02-23 12:27+0100\n"
+"POT-Creation-Date: 2004-04-12 21:39+0200\n"
+"PO-Revision-Date: 2004-04-12 21:40+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: gimp.linux.it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "Date: dom feb  6 16:47:39 CET 2000\n"
 
 #: libgimp/gimpbrushmenu.c:132
@@ -412,14 +412,12 @@ msgid "GigaBytes"
 msgstr "GigaByte"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "Triangolo"
+msgstr "Scrivibile"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Seleziona cartella"
+msgstr "Cartella"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
@@ -527,9 +525,8 @@ msgid "Seed random number generator with a generated random number"
 msgstr "Generatore del seme di casualità con un numero generato casualmente"
 
 #: libgimpwidgets/gimpwidgets.c:1312
-#, fuzzy
 msgid "_Randomize"
-msgstr "Casualizza"
+msgstr "_Casualizza"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
