--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-04-10  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
