--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnnu.org>
 
 	* eu.po: Added Basque translation.
