--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2004-04-12  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
