--- a/tips/it.po
+++ b/tips/it.po
@@ -1,25 +1,19 @@
-# translation of it.po to gimp.linux.it
 # translation of gimp20-tips.po to italian
 # Copyright (C) 2003, 2004 Free Software Foundation, Inc.
-# MIke Vargas <ciao@volalibero.it> , 2004.
-# MIke Vargas <ciao@volalibero.it> , 2004.
-# MIke Vargas <ciao@volalibero.it> , 2004.
-# MIke Vargas <ciao@volalibero.it> , 2004.
-# MIke Vargas <ciao@volalibero.it> , 2004.
-# MIke Vargas <ciao@volalibero.it> , 2004.
+# MIke Vargas <ciao@volalibero.it>, 2004.
+# Marco Ciampa <ciampix@libero.it>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 22:57+0100\n"
+"POT-Creation-Date: 2004-04-12 22:38+0200\n"
 "PO-Revision-Date: 2004-02-12 14:09+0100\n"
-"Last-Translator: MIke Vargas <ciao@volalibero.it> \n"
+"Last-Translator: Marco Ciampa <ciampix@libero.it> \n"
 "Language-Team: gimp.linux.it <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.2\n"
+"Report-Msgid-Bugs-To: Last-Translator \n"
 
 #: tips/gimp-tips.xml.in.h:1
 msgid "<big>Welcome to The GIMP !</big>"
@@ -51,13 +45,12 @@ msgstr ""
 "sarà utilizzato il colore di sfondo invece di quello in primo piano."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
 "degree angles."
 msgstr ""
-"Premendo <tt>Ctrl</tt> e trascinando il mouse mentre si usa lo strumento "
-"Rotazione, quest'ultima sarà forzata ad angoli di 15 gradi."
+"Premendo <tt>Ctrl</tt> e trascinando con lo strumento Rotazione, "
+"quest'ultima sarà forzata ad angoli di 15 gradi."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -82,17 +75,17 @@ msgstr ""
 "stesse azioni."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
 "menu item, and pressing the desired key combination. If \"Save Keyboard "
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
-"Dopo aver attivato \"Scorciatoie da tastiera dinamiche\" nelle Preferenze, "
-"puoi riassegnare le scorciatoie da tastiera. Puoi farlo aprendo il menu, "
-"selezionando una voce, e premendo la combinazione desiderata. Essa sarà "
-"salvata quando esci da GIMP."
+"Dopo aver attivato \"Tasti scorciatoia dinamici\" nelle Preferenze, puoi "
+"riassegnare le scorciatoie da tastiera. Basta aprire il menu, selezionare "
+"una voce, e premere la combinazione desiderata. Se l'opzione \"Salva i tasti "
+"scorciatoia all'uscita\" è abilitata, la combinazione sarà salvata quando si "
+"esce da GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -118,16 +111,14 @@ msgstr ""
 "Colori&gt;Curve). "
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
 "If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
 "with their current settings. You can use the Paintbrush in gradient mode or "
 "even the Eraser or the Smudge tool."
 msgstr ""
-"Se sbarri un tracciato (Modifica&gt;Sbarra), sono usate le impostazioni "
-"dello strumento di disegno corrente. Puoi usare il Pennello nella modalità "
-"gradiente, lo strumento Clone con un pattern o anche lo Gomma o lo strumento "
-"Sfumino."
+"Se si delinea un tracciato (Modifica-&gt;Disegna tracciato), vengono usate "
+"le impostazioni dello strumento di disegno corrente. Si può usare il "
+"Pennello nella modalità gradiente oppure la Gomma o lo strumento Sfumino."
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
@@ -139,14 +130,13 @@ msgstr ""
 "strumenti o le altre finestre di dialogo."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
 "you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "La maggior parte dei plug-in lavora sul livello attivo dell'immagine "
-"corrente. In alcuni casi dovrai unire tutti i livelli (Immagine&gt;"
+"corrente. In alcuni casi è necessario unire tutti i livelli (Immagine&gt;"
 "Appiattisci immagine) se vuoi che i plug-in agiscano sull'intera immagine."
 
 #: tips/gimp-tips.xml.in.h:14
@@ -159,7 +149,6 @@ msgstr ""
 "maggior parte degli errori..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
@@ -169,8 +158,8 @@ msgstr ""
 "Non tutti gli effetti possono essere applicati ad ogni tipo di immagine. In "
 "caso di impossibilità la corrispondente voce del menù sarà grigia. Per "
 "risolvere il problema, puoi cambiare la modalità immagine in RGB (Immagine "
-"&gt;Modalità&gt;RGB), aggiungere un canale alpha (Livelli&gt;Trasparenze&gt;"
-"Aggiungi canale alpha) o appiattirla (Immagine&gt;Appiattisci immagine)."
+"&gt;Modalità&gt;RGB), aggiungere un canale alfa (Livelli&gt;Trasparenze&gt;"
+"Aggiungi canale alfa) o appiattirla (Immagine&gt;Appiattisci immagine)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -284,15 +273,14 @@ msgstr ""
 "trascinando a sinistra o a destra."
 
 #: tips/gimp-tips.xml.in.h:26
-#, fuzzy
 msgid ""
 "You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
-"Puoi creare e modificare selezioni complesse usando lo strumento Bezier. La "
-"finestra di dialogo Tracciati ti permette di lavorare con molteplici "
-"tracciati e di convertirli in selezione."
+"Puoi creare e modificare selezioni complesse usando lo strumento Tracciati. "
+"La finestra di dialogo Tracciati ti permette di lavorare con molteplici "
+"tracciati e di convertirli in selezioni."
 
 #: tips/gimp-tips.xml.in.h:27
 msgid ""
@@ -314,15 +302,14 @@ msgstr ""
 "nell'immagine riempirai l'immagine corrente o la selezione con quel colore."
 
 #: tips/gimp-tips.xml.in.h:29
-#, fuzzy
 msgid ""
 "You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
 "strokes the edge of your current selection. More complex shapes can be drawn "
 "using the Path tool or with Filters-&gt;Render-&gt;Gfig."
 msgstr ""
-"Usando Modifica &gt;Sbarra potrai disegnare semplici quadrati o cerchi "
-"tracciando la selezione corrente con il pennello attivo. Forme più complesse "
-"possono essere disegnate con Filtri-&gt;Render&gt;Gfig."
+"Usando Modifica-&gt;Disegna selezione potrai disegnare semplici quadrati o "
+"cerchi tracciando la selezione corrente con il pennello attivo. Forme più "
+"complesse possono essere disegnate con Filtri-&gt;Render-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
